# proto_socket_django

./: .dockerignore  .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
django_myapp.egg-info/: PKG-INFO
proto_socket_django/: __init__.py  __main__.py  api_models.py  apps.py  async_worker.py  betterproto_patch.py  consumer.py  debouncer.py  receivers.py  serializers.py  utils.py  views.py  worker.py
proto_socket_django.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
proto_socket_django/management/commands/: genproto.py
